chore: Add list of column display

--- a/USCensusDemographic.ipynb
+++ b/USCensusDemographic.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
        "[5 rows x 37 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,6 +601,54 @@
    "source": [
     "# Display county_census data\n",
     "county_census_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "County census data contains 3220 row and 37 columns\n",
+      "Census data contains 74001 row and 37 columns\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Display total number of rows and columns\n",
+    "print (\"County census data contains {} row and {} columns\" .format(county_census_data.shape[0],county_census_data.shape[1]))\n",
+    "print (\"Census data contains {} row and {} columns\" .format(census_data.shape[0],census_data.shape[1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['CensusId', 'State', 'County', 'TotalPop', 'Men', 'Women', 'Hispanic',\n",
+       "       'White', 'Black', 'Native', 'Asian', 'Pacific', 'Citizen', 'Income',\n",
+       "       'IncomeErr', 'IncomePerCap', 'IncomePerCapErr', 'Poverty',\n",
+       "       'ChildPoverty', 'Professional', 'Service', 'Office', 'Construction',\n",
+       "       'Production', 'Drive', 'Carpool', 'Transit', 'Walk', 'OtherTransp',\n",
+       "       'WorkAtHome', 'MeanCommute', 'Employed', 'PrivateWork', 'PublicWork',\n",
+       "       'SelfEmployed', 'FamilyWork', 'Unemployment'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Display listof columns\n",
+    "county_census_data.columns"
    ]
   }
  ],
