Add: pandas scatter plot

--- a/USCensusDemographic.ipynb
+++ b/USCensusDemographic.ipynb
@@ -1747,6 +1747,16 @@
     "\n",
     "    regressor_score(regressor, new_data,new_data_y, label)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Produce a scatter matrix for data\n",
+    "pd.plotting.scatter_matrix(data, alpha = 0.3, figsize = (14,8), diagonal = 'kde')"
+   ]
   }
  ],
  "metadata": {
