chore: Add PCA and check Variance

--- a/USCensusDemographic.ipynb
+++ b/USCensusDemographic.ipynb
@@ -53918,6 +53918,81 @@
    "source": [
     "samples"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Implementing Principal Component Analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dimension 1     0.2558\n",
+       "Dimension 2     0.4312\n",
+       "Dimension 3     0.5405\n",
+       "Dimension 4     0.6341\n",
+       "Dimension 5     0.7186\n",
+       "Dimension 6     0.7937\n",
+       "Dimension 7     0.8441\n",
+       "Dimension 8     0.8857\n",
+       "Dimension 9     0.9180\n",
+       "Dimension 10    0.9413\n",
+       "Dimension 11    0.9526\n",
+       "Dimension 12    0.9611\n",
+       "Dimension 13    0.9679\n",
+       "Dimension 14    0.9731\n",
+       "Dimension 15    0.9773\n",
+       "Dimension 16    0.9811\n",
+       "Dimension 17    0.9846\n",
+       "Dimension 18    0.9878\n",
+       "Dimension 19    0.9908\n",
+       "Dimension 20    0.9935\n",
+       "Dimension 21    0.9954\n",
+       "Dimension 22    0.9968\n",
+       "Dimension 23    0.9977\n",
+       "Dimension 24    0.9985\n",
+       "Dimension 25    0.9990\n",
+       "Dimension 26    0.9993\n",
+       "Dimension 27    0.9996\n",
+       "Dimension 28    0.9998\n",
+       "Dimension 29    0.9999\n",
+       "Dimension 30    0.9999\n",
+       "Dimension 31    0.9999\n",
+       "Name: Explained Variance, dtype: float64"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Apply PCA by fitting the good data with the same number of dimensions as features\n",
+    "from sklearn.decomposition import PCA\n",
+    "pca = PCA(n_components = 31)\n",
+    "pca.fit(good_data)\n",
+    "\n",
+    "#Dimension indexing\n",
+    "dimensions = dimensions = ['Dimension {}'.format(i) for i in range(1,len(pca.components_)+1)]\n",
+    "\n",
+    "# PCA component\n",
+    "components = pd.DataFrame(np.round(pca.components_, 4), columns = good_data.keys())\n",
+    "components.index = dimensions\n",
+    "\n",
+    "#PCA explained variance\n",
+    "ratios = pca.explained_variance_ratio_.reshape(len(pca.components_),1)\n",
+    "variance_ratios = pd.DataFrame(np.round(ratios, 4), columns = ['Explained Variance'])\n",
+    "variance_ratios.index = dimensions\n",
+    "\n",
+    "variance_ratios['Explained Variance'].cumsum()"
+   ]
   }
  ],
  "metadata": {
